First Commit By Chance

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ img {
 																	<img src="images/staticpage.png " />
 										</a>
 		<a  rel="external" data-ajax="flase"  href="staticpage_2931.html">
-				<label>StaticPage</label>
+				<label>StaticPageasdfas</label>
 		</a>
 	</div>
 
