--- a/video_2932.html
+++ b/video_2932.html
@@ -86,7 +86,7 @@ $(document).ready(function(){
 
   <div data-role="header"> <a class="refresh_link" id="back-link" href="#"><img src="images/home_icon.png" alt="home icon" /></a>
 
-    <h1>Video</h1>
+    <h1>Videos</h1>
 
     <a class="help_link"><img src="images/help_icon.png" alt="help icon" /></a> </div>
 
@@ -98,7 +98,7 @@ $(document).ready(function(){
 
   <a href="index.html" class="refresh_link ui-link ui-btn-left ui-btn ui-shadow ui-corner-all" data-role="button" rel="external" data-ajax="false" role="button"><img alt="home icon" src="images/home_icon.png"></a>
 
-    <h1>Video</h1>
+    <h1>Videos</h1>
 
     <a class="help_link ui-link ui-btn-right ui-btn ui-shadow ui-corner-all" data-role="button" role="button"><img alt="help icon" src="images/help_icon.png"></a> </div>
 
@@ -114,7 +114,75 @@ $(document).ready(function(){
 
 	
 
-			<p>No video upload</p>
+			    <ul data-role="listview"><li><a href='#popupVideo_148' data-rel='popup' data-position-to='window' ><img src='https://i1.ytimg.com/vi/-gaB9ov-Om0/hqdefault.jpg'  /><h2>"A.I.N.Y. &aelig;&#132;&#155;&auml;&frac12;&nbsp;" [MV] - G.E.M. &eacute;&#132;&sect;&ccedil;&acute;&laquo;&aelig;&pound;&#139;</h2><p>&auml;&frac12;&#156;&aelig;&#155;&sup2; Music by G.E.M. , Lupo Groinig
+&auml;&frac12;&#156;&egrave;&copy;&#158; Lyrics by G.E.M.
+&ccedil;&middot;&uml;&aelig;&#155;&sup2;/&ccedil;&#155;&pound;&egrave;&pound;&frac12; Arranged & Produced by Lupo Groinig
+
+Like this track? Buy here: https://itunes.apple.com/hk/album/a.i.n.y.-ai-ni/id538446710?i=538446723&uo=4&at=11lmwX
+http://www.hummingbird.hk
+
+Keyboards, Programming & Guitars: Lupo Groinig
+Bvox: G.E.M.
+Vocals engineered by Peter Roberts@Blue Danube Studio/Los Angeles
+Mixed by George Dum@Liquid Fish Studio/Los Angeles
+
+------------------------------------------------------
+
+&aring;&#136;&#134;&eacute;&#150;&#139;&auml;&raquo;&yen;&aring;&frac34;&#140;&aelig;&macr;&#143;&aring;&#128;&#139;&aring;&curren;&#156;&aelig;&#153;&#154;&atilde;&#128;&#128;&aelig;&nbsp;&frac14;&aring;&curren;&#150;&ccedil;&#154;&#132;&aring;&macr;&#130;&eacute;&#157;&#156;
+&aelig;&raquo;&acute;&ccedil;&shy;&#148;&aelig;&raquo;&acute;&ccedil;&shy;&#148;&atilde;&#128;&#128;&aring;&#137;&copy;&aring;&curren;&sect;&eacute;&#144;&#152;&aring;&#156;&uml;&eacute;&#153;&ordf;&egrave;&#145;&#151;&aelig;&#136;&#145;&aring;&#155;&#158;&aelig;&#134;&para;
+&eacute;&#155;&raquo;&egrave;&copy;&plusmn;&egrave;&pound;&iexcl;&eacute;&nbsp;&shy;&aelig;&#155;&frac34;&ccedil;&para;&#147;&aelig;&#152;&macr;&auml;&frac12;&nbsp;&aelig;&#156;&#128;&aelig;&ordm;&laquo;&aelig;&#159;&#148;&ccedil;&#154;&#132;&egrave;&#129;&sup2;&eacute;&#159;&sup3;
+&ccedil;&#143;&frac34;&aring;&#156;&uml;&aring;&#143;&ordf;&aelig;&#156;&#137;&ccedil;&copy;&ordm;&aelig;&deg;&pound;&atilde;&#128;&#128;&aring;&#134;&middot;&aring;&macr;&#158;&aring;&#156;&deg;&aring;&#155;&#158;&aelig;&#135;&#137;
+
+OH&atilde;&#128;&#128;&ccedil;&micro;&brvbar;&auml;&frac12;&nbsp;&aelig;&#136;&#145;&ccedil;&#154;&#132;&aring;&iquest;&#131;&atilde;&#128;&#128;&egrave;&#131;&frac12;&aring;&#144;&brvbar;&egrave;&laquo;&#139;&auml;&frac12;&nbsp;&aring;&#136;&yen;&eacute;&#129;&ordm;&aelig;&pound;&#132;
+&auml;&cedil;&#128;&aring;&#143;&yen;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&egrave;&#131;&frac12;&aring;&#144;&brvbar;&aring;&#134;&#141;&auml;&sup1;&#159;&auml;&cedil;&#141;&aring;&#136;&#134;&eacute;&#155;&cent;
+OH&atilde;&#128;&#128;&ccedil;&micro;&brvbar;&auml;&frac12;&nbsp;&aelig;&#136;&#145;&ccedil;&#154;&#132;&aring;&iquest;&#131;&atilde;&#128;&#128;&ccedil;&#130;&ordm;&auml;&raquo;&#128;&eacute;&ordm;&frac14;&auml;&frac12;&nbsp;&aring;&#141;&raquo;&ccedil;&micro;&brvbar;&auml;&ordm;&#134;&aelig;&#136;&#145;&aring;&shy;&curren;&aring;&macr;&#130;
+&aring;&deg;&plusmn;&ccedil;&reg;&#151;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&aring;&#143;&macr;&egrave;&#131;&frac12;&auml;&frac12;&nbsp;&auml;&sup1;&#159;&auml;&cedil;&#141;&aelig;&#131;&sup3;&egrave;&#129;&frac12;
+
+&auml;&frac12;&nbsp;&ccedil;&#154;&#132;&aelig;&#147;&#129;&aelig;&#138;&plusmn;&aelig;&#155;&frac34;&ccedil;&para;&#147;&aelig;&#152;&macr;&atilde;&#128;&#128;&aelig;&#156;&#128;&aelig;&ordm;&laquo;&aelig;&#154;&#150;&aelig;&#156;&#128;&ccedil;&#134;&#159;&aelig;&#130;&#137;
+&ccedil;&#143;&frac34;&aring;&#156;&uml;&aelig;&#143;&#155;&auml;&ordm;&#134;&egrave;&ordf;&deg;&aring;&reg;&#137;&ccedil;&#157;&iexcl;&aring;&#156;&uml;&auml;&frac12;&nbsp;&egrave;&#131;&cedil;&aring;&#143;&pound;&ccedil;&#154;&#132;&auml;&frac12;&#141;&ccedil;&frac12;&reg;
+&auml;&frac12;&nbsp;&ccedil;&#154;&#132;&aelig;&#137;&iquest;&egrave;&laquo;&frac34;&aelig;&#155;&frac34;&aelig;&#152;&macr;&auml;&cedil;&#128;&ccedil;&uml;&reg;&auml;&cedil;&#141;&egrave;&#135;&ordf;&egrave;&brvbar;&ordm;&ccedil;&#154;&#132;&ccedil;&#148;&#156;&egrave;&#156;&#156;
+&ccedil;&#143;&frac34;&aring;&#156;&uml;&auml;&cedil;&#128;&aring;&#138;&#131;&auml;&cedil;&#128;&ccedil;&shy;&#134;&atilde;&#128;&#128;&aring;&#136;&ordm;&aring;&#156;&uml;&aelig;&#136;&#145;&aring;&iquest;&#131;&egrave;&pound;&iexcl;
+
+OH&atilde;&#128;&#128;&ccedil;&micro;&brvbar;&auml;&frac12;&nbsp;&aelig;&#136;&#145;&ccedil;&#154;&#132;&aring;&iquest;&#131;&atilde;&#128;&#128;&egrave;&#131;&frac12;&aring;&#144;&brvbar;&egrave;&laquo;&#139;&auml;&frac12;&nbsp;&aring;&#136;&yen;&eacute;&#129;&ordm;&aelig;&pound;&#132;
+(I gave you everything, Never Asked for anything)
+&auml;&cedil;&#128;&aring;&#143;&yen;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&egrave;&#131;&frac12;&aring;&#144;&brvbar;&aring;&#134;&#141;&auml;&sup1;&#159;&auml;&cedil;&#141;&aring;&#136;&#134;&eacute;&#155;&cent;
+(I wish that you could stay, Ha! It's just my wishful thinking)
+OH&atilde;&#128;&#128;&ccedil;&micro;&brvbar;&auml;&frac12;&nbsp;&aelig;&#136;&#145;&ccedil;&#154;&#132;&aring;&iquest;&#131;&atilde;&#128;&#128;&ccedil;&#130;&ordm;&auml;&raquo;&#128;&eacute;&ordm;&frac14;&auml;&frac12;&nbsp;&aring;&#141;&raquo;&ccedil;&micro;&brvbar;&auml;&ordm;&#134;&aelig;&#136;&#145;&aring;&shy;&curren;&aring;&macr;&#130;
+(I gave you everything, But all I got is pain)
+&aring;&deg;&plusmn;&ccedil;&reg;&#151;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&aring;&#143;&macr;&egrave;&#131;&frac12;&auml;&frac12;&nbsp;&auml;&sup1;&#159;&auml;&cedil;&#141;&aelig;&#131;&sup3;&egrave;&#129;&frac12;&atilde;&#128;&#128;&auml;&frac12;&nbsp;&auml;&cedil;&#141;&aelig;&#131;&sup3;&egrave;&#129;&frac12;
+(Although my heart is bleeding, You still don't feel a thing)
+
+&aring;&#155;&#158;&aelig;&#134;&para;&atilde;&#128;&#128;&aring;&deg;&#141;&auml;&frac12;&nbsp;&aelig;&#156;&#128;&aring;&frac34;&#140;&ccedil;&#154;&#132;&aring;&#155;&#158;&aelig;&#134;&para;
+(&aring;&#155;&#158;&aelig;&#134;&para; &aelig;&#156;&#128;&aring;&frac34;&#140;&ccedil;&#154;&#132;&aring;&#155;&#158;&aelig;&#134;&para;)
+&aelig;&#152;&macr;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&aelig;&#133;&cent;&aelig;&#133;&cent;&egrave;&micro;&deg;&eacute;&#129;&nbsp;&ccedil;&#154;&#132;&egrave;&ordm;&laquo;&aring;&frac12;&plusmn;
+(&aelig;&#152;&macr;&auml;&frac12;&nbsp; &egrave;&micro;&deg;&eacute;&#129;&nbsp;&ccedil;&#154;&#132;&egrave;&ordm;&laquo;&aring;&frac12;&plusmn;)
+&ccedil;&#132;&para;&aring;&frac34;&#140;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&eacute;&#155;&cent;&eacute;&#150;&#139;&auml;&ordm;&#134;&aelig;&sup2;&#146;&aelig;&#156;&#137;&ccedil;&#151;&#149;&egrave;&middot;&iexcl;
+(&ccedil;&#132;&para;&aring;&frac34;&#140;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&eacute;&#155;&cent;&eacute;&#150;&#139;)
+&ccedil;&#132;&para;&aring;&frac34;&#140;&aelig;&#136;&#145;&atilde;&#128;&#128;&aring;&acute;&copy;&aelig;&frac12;&deg;&auml;&ordm;&#134;&aelig;&#148;&frac34;&ccedil;&cedil;&plusmn;&aring;&#147;&shy;&aelig;&sup3;&pound;
+(&ccedil;&#132;&para;&aring;&frac34;&#140;&aelig;&#136;&#145;&atilde;&#128;&#128;&aring;&#147;&shy;&aelig;&sup3;&pound;)
+&aelig;&#129;&uml;&auml;&frac12;&nbsp;&aelig;&#129;&uml;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&aelig;&macr;&#143;&ccedil;&#149;&para;&aelig;&#136;&#145;&aelig;&#131;&sup3;&egrave;&micro;&middot;&aelig;&#155;&frac34;&ccedil;&para;&#147;
+(&aelig;&#129;&uml;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&aelig;&macr;&#143;&ccedil;&#149;&para;&aelig;&#136;&#145;&aelig;&#131;&sup3;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&aelig;&macr;&#143;&ccedil;&#149;&para;&aelig;&#136;&#145;&aelig;&#131;&sup3;&egrave;&micro;&middot;&aelig;&#155;&frac34;&ccedil;&para;&#147;)
+&aelig;&#155;&frac34;&ccedil;&para;&#147;&aelig;&#155;&frac34;&ccedil;&para;&#147;&aelig;&#155;&frac34;&ccedil;&para;&#147;&aelig;&#155;&frac34;&ccedil;&para;&#147;......
+
+&eacute;&#130;&#132;&aelig;&#152;&macr;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;
+&eacute;&#155;&pound;&eacute;&#129;&#147;&eacute;&#130;&#132;&auml;&cedil;&#141;&egrave;&#131;&frac12;&aelig;&cedil;&#133;&eacute;&#134;&#146;
+
+OH&atilde;&#128;&#128;&ccedil;&micro;&brvbar;&auml;&frac12;&nbsp;&aelig;&#136;&#145;&ccedil;&#154;&#132;&aring;&iquest;&#131;&atilde;&#128;&#128;&ccedil;&#130;&ordm;&auml;&raquo;&#128;&eacute;&ordm;&frac14;&auml;&frac12;&nbsp;&aring;&#141;&raquo;&ccedil;&micro;&brvbar;&auml;&ordm;&#134;&aelig;&#136;&#145;&aring;&shy;&curren;&aring;&macr;&#130;
+(I gave you everything, Never Asked for anything)
+&auml;&cedil;&#128;&aring;&#143;&yen;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&eacute;&#155;&pound;&eacute;&#129;&#147;&auml;&frac12;&nbsp;&auml;&sup1;&#159;&auml;&cedil;&#141;&aelig;&#131;&sup3;&egrave;&#129;&frac12;
+(I wish that you could stay, Ha! It's just my wishful thinking)
+OH&atilde;&#128;&#128;&ccedil;&micro;&brvbar;&auml;&frac12;&nbsp;&aelig;&#136;&#145;&ccedil;&#154;&#132;&aring;&iquest;&#131;&atilde;&#128;&#128;&ccedil;&#130;&ordm;&auml;&raquo;&#128;&eacute;&ordm;&frac14;&auml;&frac12;&nbsp;&aring;&#141;&raquo;&ccedil;&micro;&brvbar;&auml;&ordm;&#134;&aelig;&#136;&#145;&aring;&shy;&curren;&aring;&macr;&#130;
+(I gave you everything, But all I got is pain)
+&aring;&deg;&plusmn;&ccedil;&reg;&#151;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&aelig;&#132;&#155;&auml;&frac12;&nbsp;&atilde;&#128;&#128;&auml;&cedil;&#141;&aring;&#128;&frac14;&aring;&frac34;&#151;&ccedil;&#130;&ordm;&auml;&frac12;&nbsp;&aring;&#130;&middot;&aring;&iquest;&#131;&atilde;&#128;&#128;&aring;&#130;&middot;&aring;&iquest;&#131;
+(Although my heart is bleeding, You still don't feel a thing)
+
+Your confession remains to be my final pleading,
+but the only thing that's here with me is tic tac tic tac tic tac tic tac......
+
+-------------------------------------------
+
+OP: Hummingbird Music Ltd. admin. by Fujipacific Music (S.E. Asia) Ltd.</p></a></li><li><a href='#popupVideo_149' data-rel='popup' data-position-to='window' ><img src='https://i.ytimg.com/vi/y6Sxv-sUYtM/hqdefault.jpg'  /><h2>Pharrell Williams - Happy (Official Music Video)</h2><p>Get Pharrell's new album G I R L with 10 Brand New Tracks on iTunes: http://smarturl.it/GIRLitunes Get Pharrell's new album G I R L with 10 Brand New Tracks ...</p></a></li><li><a href='#popupVideo_150' data-rel='popup' data-position-to='window' ><img src='https://i.ytimg.com/vi/RF0HhrwIwp0/hqdefault.jpg'  /><h2>Kings Of Leon - Sex on Fire</h2><p>Music video by Kings Of Leon performing Sex On Fire. (C) 2008 RCA Records, a unit of SONY BMG MUSIC ENTERTAINMENT.</p></a></li><li><a href='#popupVideo_152' data-rel='popup' data-position-to='window' ><img src='https://i.ytimg.com/vi/gnhXHvRoUd0/hqdefault.jpg'  /><h2>Kings Of Leon - Use Somebody</h2><p>Music video by Kings Of Leon performing Use Somebody. (C) 2008 RCA Records, a unit of SONY MUSIC ENTERTAINMENT.</p></a></li></ul><div data-role="popup" id="popupVideo_148" data-overlay-theme="b" data-theme="a" data-tolerance="0,0" class="ui-content"><iframe width="100%" height="315" src="http://www.youtube.com/embed/-gaB9ov-Om0?rel=0" frameborder="0" allowfullscreen></iframe><a href="#" data-rel="back" class="ui-btn ui-btn-b ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a></div><div data-role="popup" id="popupVideo_149" data-overlay-theme="b" data-theme="a" data-tolerance="0,0" class="ui-content"><iframe width="100%" height="315" src="http://www.youtube.com/embed/y6Sxv-sUYtM?rel=0" frameborder="0" allowfullscreen></iframe><a href="#" data-rel="back" class="ui-btn ui-btn-b ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a></div><div data-role="popup" id="popupVideo_150" data-overlay-theme="b" data-theme="a" data-tolerance="0,0" class="ui-content"><iframe width="100%" height="315" src="http://www.youtube.com/embed/RF0HhrwIwp0?rel=0" frameborder="0" allowfullscreen></iframe><a href="#" data-rel="back" class="ui-btn ui-btn-b ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a></div><div data-role="popup" id="popupVideo_152" data-overlay-theme="b" data-theme="a" data-tolerance="0,0" class="ui-content"><iframe width="100%" height="315" src="http://www.youtube.com/embed/gnhXHvRoUd0?rel=0" frameborder="0" allowfullscreen></iframe><a href="#" data-rel="back" class="ui-btn ui-btn-b ui-corner-all ui-shadow ui-btn-a ui-icon-delete ui-btn-icon-notext ui-btn-right">Close</a></div>
+
 
             
 
