--- a/index.html
+++ b/index.html
@@ -106,6 +106,15 @@ img {
 		</a>
 	</div>
 
+			<div class="app_feature_list">
+			<a  rel="external" data-ajax="flase"  class="item link" href="photosub_2941.html">
+																	<img src="images/photosub.png " />
+										</a>
+		<a  rel="external" data-ajax="flase"  href="photosub_2941.html">
+				<label>Photos</label>
+		</a>
+	</div>
+
 	
      
 </div>
